@@ -2,6 +2,7 @@ package com.wiilisten.config;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -17,8 +18,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.wiilisten.enums.UserRoleEnum;
-import com.wiilisten.utils.ApplicationConstants;
 import com.wiilisten.utils.ApplicationURIConstants;
 import com.wiilisten.utils.JwtTokenFilter;
 
@@ -77,12 +76,12 @@ public class SecurityConfig {
 	public CorsConfigurationSource corsConfigurationSource() {
 
 		final CorsConfiguration configuration = new CorsConfiguration();
+		// Allow all origins (wildcard via pattern — required for setAllowCredentials(true))
 		configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
 		configuration.setAllowedMethods(
-				Collections.unmodifiableList(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH")));
+				Collections.unmodifiableList(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")));
 		configuration.setAllowCredentials(true);
-		configuration.setAllowedHeaders(
-				Collections.unmodifiableList(Arrays.asList("Authorization", "Cache-Control", "Content-Type")));
+		configuration.setAllowedHeaders(List.of("*"));
 		final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
